# polyglot-todo-app

./: .gitignore  README.md  pyrightconfig.json
backend/todo-FastAPI/: Dockerfile  README.md  docker-compose.yml  env.example  requirements.txt
backend/todo-FastAPI/app/: config.py  database.py  main.py
backend/todo-FastAPI/tests/: conftest.py  test_todos_api.py  test_todos_service.py
backend/todo-express/: .env.example  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
backend/todo-express/src/: app.ts  server.ts
backend/todo-express/test/: todos.spec.ts
backend/todo-fastAPI/: Makefile  pyproject.toml  requirements-dev.txt
backend/todo-fastAPI/scripts/: dev.sh  worker.sh
backend/todo-nestjs/: .eslintrc.js  .prettierrc  Dockerfile  README.md  docker-compose.yml  env.example  jest.config.ts  nest-cli.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend/todo-nestjs/documentation/: coverage.html  dependencies.html  index.html  modules.html  overview.html  properties.html  routes.html
backend/todo-nestjs/public/: styles.css
backend/todo-nestjs/src/: app.module.ts  main.ts
backend/todo-nestjs/test/: app.e2e-spec.ts
backend/todo-nestjs/views/: error.ejs  (+1 more)
backend/todo-spring/: Dockerfile  README.md  docker-compose.yml  pom.xml
frontend/todo-react/: README.md  index.html  package-lock.json  package.json
frontend/todo-react-native/: App.tsx  README.md  app.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+172 files in other folders)
